[tool.poetry]
name = "qptfapi"
version = "0.1.0"
description = "Implements api for using chatgpt and other NLP tools"
authors = ["Kapil Pande <kapil@lookupitsolutions.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
fastapi = "^0.103.1"
pydantic = { version = "^2.3", extras = ["email", "dotenv"] }
asyncpg = "^0.28.0"
psycopg2-binary = "^2.9.7"
aiosql = "^9.0"
pypika = "^0.48.9"
alembic = "^1.12.0"
unidecode = "^1.3.6"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^5.12.0"
autoflake = "^2.2.1"
wemake-python-styleguide = "^0.18.0"
mypy = "^1.5.1"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"
pytest-xdist = "^3.3.1"
pytest-env = "^1.0.1"
asgi-lifespan = "^2.1.0"
httpx = "^0.25.0"
flake8-fixme = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["app", "tests"]
combine_as_imports = true

